# genetic_algorithm

./: CMakeLists.txt  README.md
inc/: genetic.h
src/: genann_evo.c  genetic.c  main.c
